--- a/proyecto/src/components/Song/song.css
+++ b/proyecto/src/components/Song/song.css
@@ -14,3 +14,31 @@
 .show{
     display: block;
 }
+
+.song{
+    background-color: #F7F6FF;
+    border-radius: 20px;
+    width: 80%;
+}
+
+h3{
+    font-size: 20px;
+    padding-left: 5%;
+
+}
+h4{
+    padding-left: 5%;
+}
+
+img{
+    width: 100%;
+}
+
+button{
+    margin-top: 20px;
+    margin-left: 90%;
+    padding: 5px;
+    border-radius: 30px;
+    text-decoration: none;
+    border:0px solid;
+}
