--- a/proyecto/src/components/Footer/footer.css
+++ b/proyecto/src/components/Footer/footer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 .footer {
     width: auto;
     height: 200px;
@@ -13,4 +15,7 @@
     color:#e0fc00 ;
     display: flex;
     justify-content: center;
+    font-family: "Montserrat";
+    font-size: 14px;
 }
+
