--- a/proyecto/src/components/SongsContainer/Search/Search.css
+++ b/proyecto/src/components/SongsContainer/Search/Search.css
@@ -1,6 +1,14 @@
 .searchContainer{
     background-color: black;
     padding-left: 10%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: black;
+    height: 50px;
+    border-radius: 50px;
+    padding: 10px;
+    color: aqua;
 }
 
 /* .searchInput{
