--- a/proyecto/src/components/Song/song.css
+++ b/proyecto/src/components/Song/song.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
 .song{
-    width: 20%;
+    width: 15%;
+    padding: 3%;
     margin: 5px;
     transition: all .2s ease-in-out;
 }
@@ -10,7 +11,7 @@
     transform: scale(1.05);
 }
 
-button{
+.deleteButton{
     margin-left: 90%;
     margin-top: 2%;
     border-radius: 30px;
@@ -19,7 +20,7 @@ button{
     background-color: #e0fc00;
 }
 
-button:hover{
+.deleteButton:hover{
     opacity: 50%;
     cursor: pointer;
 }
