--- a/proyecto/src/components/SongsContainer/Search/Search.css
+++ b/proyecto/src/components/SongsContainer/Search/Search.css
@@ -1,20 +1,42 @@
-.searchContainer{
+form{
     background-color: black;
-    padding-left: 10%;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background: black;
-    height: 50px;
-    border-radius: 50px;
-    padding: 10px;
-    color: aqua;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-top: 0px;
+    padding-bottom: 80px;
+    transition: all .2s ease-in-out;
 }
 
-/* .searchInput{
-
+form:hover{
+    transform: scale(1.05); 
 }
 
-.searchButton{
-    
-} */
+.inputSearch{
+    width: 40%;
+    font-family: "Montserrat";
+    background-color:black;
+    border-radius: none;
+    border-color: #e0fc00 ;
+    height: 30px;
+    color: #e0fc00;
+    border: 0px solid;
+    border-bottom: 2px solid;
+}
+
+
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+input::placeholder{
+    color: #e0fc00;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.lupita{
+    margin-left: 1%;
+    color:#e0fc00;
+}
