--- a/proyecto/src/components/SongsContainer/SongsContainer.css
+++ b/proyecto/src/components/SongsContainer/SongsContainer.css
@@ -1,10 +1,21 @@
-.songsContainer {
+.songsContainer-row {
     background-color: black;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
 }
+
+.songsContainer-column {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 
 .buttonContainer{
     background-color: black;
@@ -29,6 +40,24 @@
 }
 
 .addButton:hover{
+    opacity: 50%;
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+.orientationBtn{
+    background-color:#e0fc00;
+    width: 30%;
+    height: 30px;
+    font-family: "Montserrat";
+    border-radius: none;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    transition: all .2s ease-in-out;
+}
+
+.orientationBtn:hover{
     opacity: 50%;
     cursor: pointer;
     transform: scale(1.05);
