--- a/proyecto/src/components/Song/song.css
+++ b/proyecto/src/components/Song/song.css
@@ -29,7 +29,7 @@
 .deleteButton{
     margin-left: 90%;
     margin-top: 2%;
-    border-radius: 30px;
+    border-radius: 180px;
     text-decoration: none;
     border:0px solid;
     background-color: #e0fc00;
@@ -40,7 +40,7 @@
     cursor: pointer;
 }
 
-img{
+.imgSong{
     width: 100%;
     border-radius: 180px;
 }
