--- a/proyecto/src/components/SongsContainer/Search/Search.css
+++ b/proyecto/src/components/SongsContainer/Search/Search.css
@@ -4,7 +4,8 @@ form{
     justify-content: center;
     width: 100%;
     padding-top: 0px;
-    padding-bottom: 80px;
+    align-items: center;
+    height: 90px;
     transition: all .2s ease-in-out;
 }
 
@@ -34,7 +35,7 @@ input::placeholder{
     font-style: italic;
 }
 
-.lupita{
-    margin-left: 1%;
+/* .lupita{
+    margin-left: 0.5%;
     color:#e0fc00;
-}
+} */
